[package]
name = "robust_scaler"
version = "0.1.0"
edition = "2021"
description = "A RobustScaler for Rust, compatible with scikit-learn's RobustScaler"
license = "MIT"
repository = "https://github.com/Izek1234/robust_scaler"
keywords = ["ml", "preprocessing", "scaler"]
categories = ["science"]

[dependencies]
ndarray = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
